--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,14 @@
-# Test against version of Node.js
+# Test against this version of Node.js
 environment:
   matrix:
-  #node.js
+  # node.js
   - nodejs_version: "6"
 
 # Install scripts. (runs after repo cloning)
 install:
   # Get the latest stable version of Node.js or io.js
   - ps: Install-Product node $env:nodejs_version
-  # Install modules
+  # install modules
   - npm install
 
 # Post-install test scripts.
@@ -19,5 +19,5 @@ test_script:
   # run tests
   - npm test
 
-# Don't actually build
+# Don't actually build.
 build: off
